# parmetis

./: .project  CMakeLists.txt
libparmetis/: CMakeLists.txt  parmetislib.h
metis/GKlib/: CMakeLists.txt  GKlibSystem.cmake  gk_arch.h  gk_getopt.h  ms_stdint.h
metis/GKlib/test/: CMakeLists.txt
metis/include/: metis.in.h
metis/libmetis/: CMakeLists.txt  metislib.h
metis/programs/: CMakeLists.txt  metisbin.h
programs/: CMakeLists.txt  parmetisbin.h
